Fix overlapping

--- a/scss/_custom/training/adobe/indesign/_indesign-category-old-ie-styles.scss
+++ b/scss/_custom/training/adobe/indesign/_indesign-category-old-ie-styles.scss
@@ -22,9 +22,9 @@
 }
 
 .indesign-category .courses-row {
-    margin-top: -270px;
+    margin-top: -80px;
 }
 
 .indesign-category .side-pannel {
-    margin-top: -120px;
+    margin-top: -120px; 
 }
