--- a/stylesheets/ie.css
+++ b/stylesheets/ie.css
@@ -604,7 +604,7 @@
 
 /* line 24, ../scss/_custom/training/adobe/indesign/_indesign-category-old-ie-styles.scss */
 .indesign-category .courses-row {
-  margin-top: -270px;
+  margin-top: -80px;
 }
 
 /* line 28, ../scss/_custom/training/adobe/indesign/_indesign-category-old-ie-styles.scss */
